Updated ros-gz code structure to follow best practice

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-src/energy_model/accuracy_check/video_files/
+src/energy_model/accuracy_check/video_files/*
+src/ros_gz_project_template/*
+.gitignore
