--- a/src/a1_description/package.xml
+++ b/src/a1_description/package.xml
@@ -2,9 +2,9 @@
 <package format="3">
     <name>a1_description</name>
     <version>0.0.0</version>
-    <description>The a1_description package</description>
+    <description>Unitree A1 description package for ROS2</description>
 
-    <maintainer email="laikago@unitree.cc">unitree</maintainer>
+    <maintainer email="nathan.wolfsonkin@cooper.edu">Nathan Wolf-Sonkin</maintainer>
     <license>TODO</license>
 
     <buildtool_depend>ament_cmake</buildtool_depend>
