--- a/src/energy_pkg/package.xml
+++ b/src/energy_pkg/package.xml
@@ -3,16 +3,16 @@
 <package format="3">
   <name>energy_pkg</name>
   <version>0.0.0</version>
-  <description>Package for calculating the energy state of a quadrupedal robot</description>
+  <description>Energy analysis package for quadrupeds</description>
   <maintainer email="nathan.wolfsonkin@cooper.edu">Nathan Wolf-Sonkin</maintainer>
   <license>Apache-2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
