added energy node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,12 @@ services:
     devices:
       - /dev/dri:/dev/dri
     environment:
-      - LIBVA_DRIVER_NAME=iHD   # Set Intel GPU driver environment
-      - DISPLAY=${DISPLAY}       # Set DISPLAY environment variable for X11
+      - LIBVA_DRIVER_NAME=iHD # Set Intel GPU driver environment
+      - DISPLAY=${DISPLAY} # Set DISPLAY environment variable for X11
     volumes:
-      - /etc/OpenCL/vendors:/etc/OpenCL/vendors  # Mount OpenCL vendors
-      - ${PWD}/src:/workspace/src  # Mount workspace source
-      - /tmp/.X11-unix:/tmp/.X11-unix  # Mount X11 socket
+      - /etc/OpenCL/vendors:/etc/OpenCL/vendors # Mount OpenCL vendors
+      - /tmp/.X11-unix:/tmp/.X11-unix # Mount X11 socket
+      - ${PWD}/src:/workspace/src # Mount workspace source
+      - ${PWD}/energy_logs:/workspace/energy_logs # Mount energy logs
     entrypoint: /bin/bash
     network_mode: "host"
