--- a/src/quadruped_bringup/config/ros_gz_bridge_config.yaml
+++ b/src/quadruped_bringup/config/ros_gz_bridge_config.yaml
@@ -5,6 +5,13 @@
   gz_type_name: "gz.msgs.Model"
   direction: "GZ_TO_ROS"
 
+# Gazebo Simulation Clock
+- ros_topic_name: "/clock"
+  gz_topic_name: "/world/quadruped_testbench/clock"
+  ros_type_name: "rosgraph_msgs/msg/Clock"
+  gz_type_name: "gz.msgs.Clock"
+  direction: "GZ_TO_ROS"
+
 # FR Leg Controllers
 - topic_name: "/quadruped/cmd_FR_hip_joint"
   ros_type_name: "std_msgs/msg/Float64"
