--- a/src/energy_pkg/package.xml
+++ b/src/energy_pkg/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="nathan.wolfsonkin@cooper.edu">Nathan Wolf-Sonkin</maintainer>
   <license>Apache-2.0</license>
 
+  <depend>energy_model</depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
