Updated quadruped inertia generation

--- a/src/quadruped_description/CMakeLists.txt
+++ b/src/quadruped_description/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.5)
-
 project(quadruped_description)
 
 find_package(ament_cmake REQUIRED)
@@ -10,71 +9,68 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-# Define paths
-set(XACRO_QUAD ${CMAKE_CURRENT_SOURCE_DIR}/xacro/quadruped.xacro)
-set(URDF_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/urdf)
-set(URDF_QUAD ${URDF_OUTPUT_DIR}/quadruped.urdf)
-
-
-set(XACRO_QUAD_PLUGINS ${CMAKE_CURRENT_SOURCE_DIR}/xacro/quad_plugins.xacro)
-set(SDF_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/models/quadruped)
-set(SDF_QUAD_PLUGINS ${SDF_OUTPUT_DIR}/model.sdf)
-
-# Ensure the output directory exists
-file(MAKE_DIRECTORY ${URDF_OUTPUT_DIR})
-file(MAKE_DIRECTORY ${SDF_OUTPUT_DIR})
-
-# Add dependency on all Xacro files
-file(GLOB_RECURSE XACRO_DEPENDENCIES ${CMAKE_CURRENT_SOURCE_DIR}/xacro/*.xacro)
-file(GLOB_RECURSE XACRO_DEPENDENCIES ${CMAKE_CURRENT_SOURCE_DIR}/config/params.yaml)
-
-# Generate URDF during build time
-add_custom_command(
-  OUTPUT ${URDF_QUAD}
-  COMMAND xacro ${XACRO_QUAD} -o ${URDF_QUAD}
-  DEPENDS ${XACRO_DEPENDENCIES}
-  COMMENT "Generating URDF from Xacro"
-)
-
-# Generate SDF during build time
-add_custom_command(
-  OUTPUT ${SDF_QUAD_PLUGINS}
-  COMMAND xacro ${XACRO_QUAD_PLUGINS} -o ${SDF_QUAD_PLUGINS}
-  DEPENDS ${XACRO_DEPENDENCIES}
-  COMMENT "Generating SDF from Xacro"
-)
-
-# Custom target to ensure URDF generation
-add_custom_target(generate_urdf ALL DEPENDS ${URDF_QUAD})
-add_custom_target(generate_sdf ALL DEPENDS ${SDF_QUAD_PLUGINS})
-
-# Fill in inertial values for params.yaml
+# --------------------------
+# YAML Generation
+# --------------------------
 set(PARAMS_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/config/params.yaml)
 set(PARAMS_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/config)
 set(PARAMS_BUILD ${PARAMS_BUILD_DIR}/params.yaml)
 set(YAML_FILL ${CMAKE_CURRENT_SOURCE_DIR}/build/yaml_fill.py)
 
-# Ensure build directory exists
 file(MAKE_DIRECTORY ${PARAMS_BUILD_DIR})
 
 add_custom_command(
   OUTPUT ${PARAMS_BUILD}
   COMMAND python3 ${YAML_FILL} ${PARAMS_SOURCE} ${PARAMS_BUILD}
   DEPENDS ${YAML_FILL} ${PARAMS_SOURCE}
-  COMMENT "Generating inertial values for unifrom mass distribution in build directory"
+  COMMENT "Generating inertial values for uniform mass distribution"
 )
 
-# Ensure YAML generation runs durring build process
 add_custom_target(generate_yaml ALL DEPENDS ${PARAMS_BUILD})
 
-#Install the generated YAML file
 install(
   FILES ${PARAMS_BUILD}
   DESTINATION share/${PROJECT_NAME}/config
 )
 
+# --------------------------
+# Xacro to URDF/SDF Generation
+# --------------------------
+set(XACRO_QUAD ${CMAKE_CURRENT_SOURCE_DIR}/xacro/quadruped.xacro)
+set(URDF_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/urdf)
+set(URDF_QUAD ${URDF_OUTPUT_DIR}/quadruped.urdf)
 
-# Install the generated URDF
+set(XACRO_QUAD_PLUGINS ${CMAKE_CURRENT_SOURCE_DIR}/xacro/quad_plugins.xacro)
+set(SDF_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/models/quadruped)
+set(SDF_QUAD_PLUGINS ${SDF_OUTPUT_DIR}/model.sdf)
+
+file(MAKE_DIRECTORY ${URDF_OUTPUT_DIR})
+file(MAKE_DIRECTORY ${SDF_OUTPUT_DIR})
+
+file(GLOB_RECURSE XACRO_DEPENDENCIES ${CMAKE_CURRENT_SOURCE_DIR}/xacro/*.xacro)
+
+# Generate URDF from Xacro
+add_custom_command(
+  OUTPUT ${URDF_QUAD}
+  COMMAND xacro ${XACRO_QUAD} -o ${URDF_QUAD}
+  DEPENDS ${XACRO_DEPENDENCIES} ${PARAMS_BUILD} generate_yaml
+  COMMENT "Generating URDF from Xacro"
+)
+
+# Generate SDF from Xacro
+add_custom_command(
+  OUTPUT ${SDF_QUAD_PLUGINS}
+  COMMAND xacro ${XACRO_QUAD_PLUGINS} -o ${SDF_QUAD_PLUGINS}
+  DEPENDS ${XACRO_DEPENDENCIES} ${PARAMS_BUILD} generate_yaml
+  COMMENT "Generating SDF from Xacro"
+)
+
+add_custom_target(generate_urdf ALL DEPENDS ${URDF_QUAD})
+add_custom_target(generate_sdf ALL DEPENDS ${SDF_QUAD_PLUGINS})
+
+# --------------------------
+# Install Files
+# --------------------------
 install(
   DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/models/quadruped/
   DESTINATION share/${PROJECT_NAME}/models/quadruped
@@ -83,12 +79,6 @@ install(
 install(
   DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/urdf/
   DESTINATION share/${PROJECT_NAME}/urdf
-)
-
-# Install the original Xacro files
-install(
-  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/xacro/
-  DESTINATION share/${PROJECT_NAME}/xacro
 )
 
 ament_package()
