--- a/src/quadruped_bringup/CMakeLists.txt
+++ b/src/quadruped_bringup/CMakeLists.txt
@@ -8,15 +8,13 @@ find_package(quadruped_gazebo REQUIRED)
 
 # Install project launch files
 install(
-  DIRECTORY
-    launch/
+  DIRECTORY launch/
   DESTINATION share/${PROJECT_NAME}/launch
 )
 
 # Install project configuration files
 install(
-  DIRECTORY
-    config/
+  DIRECTORY config/
   DESTINATION share/${PROJECT_NAME}/config
 )
 
