Added gazebo plugin functionallity to publish joint torques

--- a/src/quadruped_bringup/config/ros_gz_bridge_config.yaml
+++ b/src/quadruped_bringup/config/ros_gz_bridge_config.yaml
@@ -20,69 +20,113 @@
   direction: "ROS_TO_GZ"
 
 # FR Leg Controllers
-- ros_topic_name: "/quadruped/cmd/FR_hip_joint"
-  gz_topic_name: "/model/quadruped/joint/FR_hip_joint/cmd_force"
+- topic_name: "/quadruped/cmd_FR_hip_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
-- ros_topic_name: "/quadruped/cmd/FR_thigh_joint"
-  gz_topic_name: "/model/quadruped/joint/FR_thigh_joint/cmd_force"
+- topic_name: "/quadruped/cmd_FR_thigh_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
-- ros_topic_name: "/quadruped/cmd/FR_calf_joint"
-  gz_topic_name: "/model/quadruped/joint/FR_calf_joint/cmd_force"
+- topic_name: "/quadruped/cmd_FR_calf_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
 
 # FL Leg Controllers
-- ros_topic_name: "/quadruped/cmd/FL_hip_joint"
-  gz_topic_name: "/model/quadruped/joint/FL_hip_joint/cmd_force"
+- topic_name: "/quadruped/cmd_FL_hip_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
-- ros_topic_name: "/quadruped/cmd/FL_thigh_joint"
-  gz_topic_name: "/model/quadruped/joint/FL_thigh_joint/cmd_force"
+- topic_name: "/quadruped/cmd_FL_thigh_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
-- ros_topic_name: "/quadruped/cmd/FL_calf_joint"
-  gz_topic_name: "/model/quadruped/joint/FL_calf_joint/cmd_force"
+- topic_name: "/quadruped/cmd_FL_calf_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
 
 # RL Leg Controllers
-- ros_topic_name: "/quadruped/cmd/RL_hip_joint"
-  gz_topic_name: "/model/quadruped/joint/RL_hip_joint/cmd_force"
+- topic_name: "/quadruped/cmd_RL_hip_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
-- ros_topic_name: "/quadruped/cmd/RL_thigh_joint"
-  gz_topic_name: "/model/quadruped/joint/RL_thigh_joint/cmd_force"
+- topic_name: "/quadruped/cmd_RL_thigh_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
-- ros_topic_name: "/quadruped/cmd/RL_calf_joint"
-  gz_topic_name: "/model/quadruped/joint/RL_calf_joint/cmd_force"
+- topic_name: "/quadruped/cmd_RL_calf_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
 
 # RR Leg Controllers
-- ros_topic_name: "/quadruped/cmd/RR_hip_joint"
-  gz_topic_name: "/model/quadruped/joint/RR_hip_joint/cmd_force"
+- topic_name: "/quadruped/cmd_RR_hip_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
-- ros_topic_name: "/quadruped/cmd/RR_thigh_joint"
-  gz_topic_name: "/model/quadruped/joint/RR_thigh_joint/cmd_force"
+- topic_name: "/quadruped/cmd_RR_thigh_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
-- ros_topic_name: "/quadruped/cmd/RR_calf_joint"
-  gz_topic_name: "/model/quadruped/joint/RR_calf_joint/cmd_force"
+- topic_name: "/quadruped/cmd_RR_calf_joint"
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: "ROS_TO_GZ"
+
+# FR Joint Torques
+- topic_name: "/quadruped/FR_hip_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+- topic_name: "/quadruped/FR_thigh_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+- topic_name: "/quadruped/FR_calf_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+
+# FL Joint Torques
+- topic_name: "/quadruped/FL_hip_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+- topic_name: "/quadruped/FL_thigh_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+- topic_name: "/quadruped/FL_calf_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+
+# RL Joint Torques
+- topic_name: "/quadruped/RL_hip_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+- topic_name: "/quadruped/RL_thigh_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+- topic_name: "/quadruped/RL_calf_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+
+# RR Joint Torques
+- topic_name: "/quadruped/RR_hip_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+- topic_name: "/quadruped/RR_thigh_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
+- topic_name: "/quadruped/RR_calf_joint_torque"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: "GZ_TO_ROS"
