Converted gait_generation from Python to CPP

--- a/src/torque_test/CMakeLists.txt
+++ b/src/torque_test/CMakeLists.txt
@@ -120,6 +120,11 @@ install(
   DESTINATION share/${PROJECT_NAME}/launch
 )
 
+install(
+  DIRECTORY config/
+  DESTINATION share/${PROJECT_NAME}/config
+)
+
 # Following directives are used when testing.
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
